# loap-lab

./: CMakeLists.txt  Modeling.mat  Untitled.m  do.py  expmean.m  main.m  main.m~  motorL.m~  poli.m  untitled.slx  untitled.slx.autosave  untitled.slx.original  vehicle_model.slx  vehicle_model2.slx  y.m
data/: data_100_1.txt  data_100_2.txt  data_100_3.txt  data_100_4.txt  data_25_1.txt  data_25_2.txt  data_25_3.txt  data_25_4.txt  data_25_5.txt  data_50_1.txt  data_50_2.txt  data_50_3.txt  data_50_4.txt  data_75_1.txt  data_75_2.txt  data_75_3.txt  data_75_4.txt  experiment
data2/: data_l8.txt  data_r1.txt  data_r4.txt  data_r6.txt  data_r8.txt  data_r9.txt
data3/: data_2.txt  data_3.txt
data_dist/: data_efermo.txt2  data_efermo.txt2f  data_efermo1.txt2  data_efermo1.txt2f  data_efermo2.txt0  data_efermo2.txt2  data_efermo2.txt2f  data_efermo3.txt  data_efermo3.txt2  data_efermo3.txt2f  splitter.py
end_data/: data_10.txt  data_10.txt0  data_10.txt1  data_10.txt2  data_10.txt2f  data_6.txt0  data_6.txt1  data_6.txt2  data_6.txt2f  data_7.txt0  data_7.txt1  data_7.txt2  data_7.txt2f  data_8.txt  data_8.txt0  data_8.txt1  data_8.txt2  data_8.txt2f  data_9.txt  data_9.txt0  data_9.txt1  data_9.txt2  data_9.txt2f  splitter.py
slprj/_cgxe/untitled/: untitled_Cache.mat
slprj/_cgxe/vehicle_model/: vehicle_model_Cache.mat
slprj/_cgxe/vehicle_model2/: vehicle_model2_Cache.mat
slprj/_jitprj/: 5sn8OscmnUMNmcszwCgCtE.l  5sn8OscmnUMNmcszwCgCtE.mat  EFmQYIXt0nYT63ipOCDAZC.l  EFmQYIXt0nYT63ipOCDAZC.mat  KmnXYnxvRcP9fl7l8uN8xF.l  KmnXYnxvRcP9fl7l8uN8xF.mat  NyjfeCvVg4Unb5iCdvvwX.l  NyjfeCvVg4Unb5iCdvvwX.mat  jitEngineAccessInfo.mat  udeoZ2cRJv6SQ5ag9njlDE.l  udeoZ2cRJv6SQ5ag9njlDE.mat  xnWhSQmv4FuSxtCAS01PPB.l  xnWhSQmv4FuSxtCAS01PPB.mat
slprj/_sfprj/vehicle_model/_self/sfun/info/: binfo.mat
slprj/modeladvisor/UpgradeAdv_/vehicle__model/: ModelAdvisorData
slprj/modeladvisor/UpgradeAdv_/vehicle__model2/: ModelAdvisorData
spam/: BRO_client.rxe  BRO_client_ram.elf  BRO_client_ram.map  BRO_client_rom.elf  BRO_client_rom.map  BRO_client_rxe.elf  BRO_client_rxe.map  BRO_spam_client.c  BRO_spam_client.c~  BRO_spam_client.oil  Makefile  kernel_cfg.c  kernel_id.h
spam/common/: simul_config.c
spam/common/headers/: simul_config.h
spam/headers/: BRO_spam_client.h  BRO_spam_client.h~
src/: BrickClient  aa.sh  brick_client_utils.c  bro_fist.c  com.sh  com.sh~  data.txt  plots.py  plots.py~  run.sh  run.sh~
src/headers/: brick_client_utils.h
src/old_data/: data_.txt  data_1.txt  data_4.txt  data_5.txt  data_e0.txt  data_efermo.txt  data_efermo1.txt  data_efermo2.txt
src/old_data/collected_data/: data_l0.txt  data_l1.txt  data_l2.txt  data_l3.txt  data_l4.txt  data_l5.txt  data_l6.txt  data_l7.txt  data_l9.txt  data_r0.txt  data_r2.txt  data_r3.txt  data_r5.txt  data_r7.txt
src/old_data/collected_data/end_data/: data_6.txt  data_7.txt
src/proj/local/: bin  include  lib
