# cmake_minimum_required(VERSION <specify CMake version here>)
project(loap_lab)

set(CMAKE_CXX_STANDARD 11)

add_executable(loap_lab
        spam/common/headers/bt_comm.h
        spam/common/headers/simul_config.h
        spam/common/bt_comm.c
        spam/common/simul_config.c
        spam/headers/BRO_spam_client.h
        spam/BRO_spam_client.c
        spam/kernel_cfg.c
        spam/kernel_id.h
        src/headers/brick_client_bt.h
        src/headers/brick_client_utils.h
        src/proj/build/matplotlib/extern/agg24-svn/include/ctrl/agg_bezier_ctrl.h
        src/proj/build/matplotlib/extern/agg24-svn/include/ctrl/agg_cbox_ctrl.h
        src/proj/build/matplotlib/extern/agg24-svn/include/ctrl/agg_ctrl.h
        src/proj/build/matplotlib/extern/agg24-svn/include/ctrl/agg_gamma_ctrl.h
        src/proj/build/matplotlib/extern/agg24-svn/include/ctrl/agg_gamma_spline.h
        src/proj/build/matplotlib/extern/agg24-svn/include/ctrl/agg_polygon_ctrl.h
        src/proj/build/matplotlib/extern/agg24-svn/include/ctrl/agg_rbox_ctrl.h
        src/proj/build/matplotlib/extern/agg24-svn/include/ctrl/agg_scale_ctrl.h
        src/proj/build/matplotlib/extern/agg24-svn/include/ctrl/agg_slider_ctrl.h
        src/proj/build/matplotlib/extern/agg24-svn/include/ctrl/agg_spline_ctrl.h
        src/proj/build/matplotlib/extern/agg24-svn/include/platform/mac/agg_mac_pmap.h
        src/proj/build/matplotlib/extern/agg24-svn/include/platform/win32/agg_win32_bmp.h
        src/proj/build/matplotlib/extern/agg24-svn/include/platform/agg_platform_support.h
        src/proj/build/matplotlib/extern/agg24-svn/include/util/agg_color_conv.h
        src/proj/build/matplotlib/extern/agg24-svn/include/util/agg_color_conv_rgb16.h
        src/proj/build/matplotlib/extern/agg24-svn/include/util/agg_color_conv_rgb8.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_alpha_mask_u8.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_arc.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_array.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_arrowhead.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_basics.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_bezier_arc.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_bitset_iterator.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_blur.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_bounding_rect.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_bspline.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_clip_liang_barsky.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_color_gray.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_color_rgba.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_config.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_adaptor_vcgen.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_adaptor_vpgen.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_bspline.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_clip_polygon.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_clip_polyline.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_close_polygon.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_concat.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_contour.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_curve.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_dash.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_gpc.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_marker.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_marker_adaptor.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_segmentator.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_shorten_path.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_smooth_poly1.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_stroke.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_transform.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_conv_unclose_polygon.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_curves.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_dda_line.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_ellipse.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_ellipse_bresenham.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_embedded_raster_fonts.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_font_cache_manager.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_font_cache_manager2.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_gamma_functions.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_gamma_lut.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_glyph_raster_bin.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_gradient_lut.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_gsv_text.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_image_accessors.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_image_filters.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_line_aa_basics.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_math.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_math_stroke.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_path_length.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_path_storage.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_path_storage_integer.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_pattern_filters_rgba.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_pixfmt_amask_adaptor.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_pixfmt_base.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_pixfmt_gray.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_pixfmt_rgb.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_pixfmt_rgb_packed.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_pixfmt_rgba.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_pixfmt_transposer.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_rasterizer_cells_aa.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_rasterizer_compound_aa.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_rasterizer_outline.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_rasterizer_outline_aa.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_rasterizer_scanline_aa.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_rasterizer_scanline_aa_nogamma.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_rasterizer_sl_clip.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_renderer_base.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_renderer_markers.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_renderer_mclip.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_renderer_outline_aa.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_renderer_outline_image.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_renderer_primitives.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_renderer_raster_text.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_renderer_scanline.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_rendering_buffer.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_rendering_buffer_dynarow.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_rounded_rect.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_scanline_bin.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_scanline_boolean_algebra.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_scanline_p.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_scanline_storage_aa.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_scanline_storage_bin.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_scanline_u.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_shorten_path.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_simul_eq.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_allocator.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_converter.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_gouraud.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_gouraud_gray.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_gouraud_rgba.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_gradient.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_gradient_alpha.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_gradient_contour.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_gradient_image.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_image_filter.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_image_filter_gray.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_image_filter_rgb.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_image_filter_rgba.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_interpolator_adaptor.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_interpolator_linear.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_interpolator_persp.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_interpolator_trans.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_pattern_gray.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_pattern_rgb.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_pattern_rgba.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_solid.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_span_subdiv_adaptor.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_trans_affine.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_trans_bilinear.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_trans_double_path.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_trans_perspective.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_trans_single_path.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_trans_viewport.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_trans_warp_magnifier.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_vcgen_bspline.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_vcgen_contour.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_vcgen_dash.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_vcgen_markers_term.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_vcgen_smooth_poly1.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_vcgen_stroke.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_vcgen_vertex_sequence.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_vertex_sequence.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_vpgen_clip_polygon.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_vpgen_clip_polyline.h
        src/proj/build/matplotlib/extern/agg24-svn/include/agg_vpgen_segmentator.h
        src/proj/build/matplotlib/extern/agg24-svn/src/ctrl/agg_bezier_ctrl.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/ctrl/agg_cbox_ctrl.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/ctrl/agg_gamma_ctrl.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/ctrl/agg_gamma_spline.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/ctrl/agg_polygon_ctrl.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/ctrl/agg_rbox_ctrl.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/ctrl/agg_scale_ctrl.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/ctrl/agg_slider_ctrl.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/ctrl/agg_spline_ctrl.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/platform/AmigaOS/agg_platform_support.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/platform/BeOS/agg_platform_support.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/platform/mac/agg_mac_pmap.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/platform/mac/agg_platform_support.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/platform/sdl/agg_platform_support.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/platform/win32/agg_platform_support.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/platform/win32/agg_win32_bmp.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/platform/X11/agg_platform_support.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_arc.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_arrowhead.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_bezier_arc.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_bspline.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_color_rgba.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_curves.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_embedded_raster_fonts.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_gsv_text.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_image_filters.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_line_aa_basics.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_line_profile_aa.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_rounded_rect.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_sqrt_tables.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_trans_affine.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_trans_double_path.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_trans_single_path.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_trans_warp_magnifier.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_vcgen_bspline.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_vcgen_contour.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_vcgen_dash.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_vcgen_markers_term.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_vcgen_smooth_poly1.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_vcgen_stroke.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_vpgen_clip_polygon.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_vpgen_clip_polyline.cpp
        src/proj/build/matplotlib/extern/agg24-svn/src/agg_vpgen_segmentator.cpp
        src/proj/build/matplotlib/extern/libqhull/geom.c
        src/proj/build/matplotlib/extern/libqhull/geom.h
        src/proj/build/matplotlib/extern/libqhull/geom2.c
        src/proj/build/matplotlib/extern/libqhull/global.c
        src/proj/build/matplotlib/extern/libqhull/io.c
        src/proj/build/matplotlib/extern/libqhull/io.h
        src/proj/build/matplotlib/extern/libqhull/libqhull.c
        src/proj/build/matplotlib/extern/libqhull/libqhull.h
        src/proj/build/matplotlib/extern/libqhull/mem.c
        src/proj/build/matplotlib/extern/libqhull/mem.h
        src/proj/build/matplotlib/extern/libqhull/merge.c
        src/proj/build/matplotlib/extern/libqhull/merge.h
        src/proj/build/matplotlib/extern/libqhull/poly.c
        src/proj/build/matplotlib/extern/libqhull/poly.h
        src/proj/build/matplotlib/extern/libqhull/poly2.c
        src/proj/build/matplotlib/extern/libqhull/qhull_a.h
        src/proj/build/matplotlib/extern/libqhull/qset.c
        src/proj/build/matplotlib/extern/libqhull/qset.h
        src/proj/build/matplotlib/extern/libqhull/random.c
        src/proj/build/matplotlib/extern/libqhull/random.h
        src/proj/build/matplotlib/extern/libqhull/rboxlib.c
        src/proj/build/matplotlib/extern/libqhull/stat.c
        src/proj/build/matplotlib/extern/libqhull/stat.h
        src/proj/build/matplotlib/extern/libqhull/user.c
        src/proj/build/matplotlib/extern/libqhull/user.h
        src/proj/build/matplotlib/extern/libqhull/usermem.c
        src/proj/build/matplotlib/extern/libqhull/userprintf.c
        src/proj/build/matplotlib/extern/libqhull/userprintf_rbox.c
        src/proj/build/matplotlib/extern/ttconv/global_defines.h
        src/proj/build/matplotlib/extern/ttconv/pprdrv.h
        src/proj/build/matplotlib/extern/ttconv/pprdrv_tt.cpp
        src/proj/build/matplotlib/extern/ttconv/pprdrv_tt2.cpp
        src/proj/build/matplotlib/extern/ttconv/truetype.h
        src/proj/build/matplotlib/extern/ttconv/ttutil.cpp
        src/proj/build/matplotlib/lib/matplotlib/tri/_tri.cpp
        src/proj/build/matplotlib/lib/matplotlib/tri/_tri.h
        src/proj/build/matplotlib/lib/matplotlib/tri/_tri_wrapper.cpp
        src/proj/build/matplotlib/src/_backend_agg.cpp
        src/proj/build/matplotlib/src/_backend_agg.h
        src/proj/build/matplotlib/src/_backend_agg_basic_types.h
        src/proj/build/matplotlib/src/_backend_agg_wrapper.cpp
        src/proj/build/matplotlib/src/_backend_gdk.c
        src/proj/build/matplotlib/src/_contour.cpp
        src/proj/build/matplotlib/src/_contour.h
        src/proj/build/matplotlib/src/_contour_wrapper.cpp
        src/proj/build/matplotlib/src/_gtkagg.cpp
        src/proj/build/matplotlib/src/_image.cpp
        src/proj/build/matplotlib/src/_image.h
        src/proj/build/matplotlib/src/_image_resample.h
        src/proj/build/matplotlib/src/_image_wrapper.cpp
        src/proj/build/matplotlib/src/_path.h
        src/proj/build/matplotlib/src/_path_wrapper.cpp
        src/proj/build/matplotlib/src/_png.cpp
        src/proj/build/matplotlib/src/_tkagg.cpp
        src/proj/build/matplotlib/src/_tkmini.h
        src/proj/build/matplotlib/src/_ttconv.cpp
        src/proj/build/matplotlib/src/_windowing.cpp
        src/proj/build/matplotlib/src/agg_workaround.h
        src/proj/build/matplotlib/src/array.h
        src/proj/build/matplotlib/src/cntr.c
        src/proj/build/matplotlib/src/file_compat.h
        src/proj/build/matplotlib/src/ft2font.cpp
        src/proj/build/matplotlib/src/ft2font.h
        src/proj/build/matplotlib/src/ft2font_wrapper.cpp
        src/proj/build/matplotlib/src/mplutils.cpp
        src/proj/build/matplotlib/src/mplutils.h
        src/proj/build/matplotlib/src/numpy_cpp.h
        src/proj/build/matplotlib/src/path_cleanup.cpp
        src/proj/build/matplotlib/src/path_cleanup.h
        src/proj/build/matplotlib/src/path_converters.h
        src/proj/build/matplotlib/src/py_adaptors.h
        src/proj/build/matplotlib/src/py_converters.cpp
        src/proj/build/matplotlib/src/py_converters.h
        src/proj/build/matplotlib/src/py_exceptions.h
        src/proj/build/matplotlib/src/qhull_wrap.c
        src/proj/include/python2.7/numpy/__multiarray_api.h
        src/proj/include/python2.7/numpy/__ufunc_api.h
        src/proj/include/python2.7/numpy/_neighborhood_iterator_imp.h
        src/proj/include/python2.7/numpy/_numpyconfig.h
        src/proj/include/python2.7/numpy/arrayobject.h
        src/proj/include/python2.7/numpy/arrayscalars.h
        src/proj/include/python2.7/numpy/halffloat.h
        src/proj/include/python2.7/numpy/ndarrayobject.h
        src/proj/include/python2.7/numpy/ndarraytypes.h
        src/proj/include/python2.7/numpy/noprefix.h
        src/proj/include/python2.7/numpy/npy_3kcompat.h
        src/proj/include/python2.7/numpy/npy_common.h
        src/proj/include/python2.7/numpy/npy_cpu.h
        src/proj/include/python2.7/numpy/npy_endian.h
        src/proj/include/python2.7/numpy/npy_interrupt.h
        src/proj/include/python2.7/numpy/npy_math.h
        src/proj/include/python2.7/numpy/npy_os.h
        src/proj/include/python2.7/numpy/numpyconfig.h
        src/proj/include/python2.7/numpy/old_defines.h
        src/proj/include/python2.7/numpy/oldnumeric.h
        src/proj/include/python2.7/numpy/ufuncobject.h
        src/proj/include/python2.7/numpy/utils.h
        src/proj/include/python2.7/Imaging.h
        src/proj/include/python2.7/ImDib.h
        src/proj/include/python2.7/ImPlatform.h
        src/proj/include/python2.7/pyconfig.h
        src/proj/local/include/python2.7/numpy/__multiarray_api.h
        src/proj/local/include/python2.7/numpy/__ufunc_api.h
        src/proj/local/include/python2.7/numpy/_neighborhood_iterator_imp.h
        src/proj/local/include/python2.7/numpy/_numpyconfig.h
        src/proj/local/include/python2.7/numpy/arrayobject.h
        src/proj/local/include/python2.7/numpy/arrayscalars.h
        src/proj/local/include/python2.7/numpy/halffloat.h
        src/proj/local/include/python2.7/numpy/ndarrayobject.h
        src/proj/local/include/python2.7/numpy/ndarraytypes.h
        src/proj/local/include/python2.7/numpy/noprefix.h
        src/proj/local/include/python2.7/numpy/npy_3kcompat.h
        src/proj/local/include/python2.7/numpy/npy_common.h
        src/proj/local/include/python2.7/numpy/npy_cpu.h
        src/proj/local/include/python2.7/numpy/npy_endian.h
        src/proj/local/include/python2.7/numpy/npy_interrupt.h
        src/proj/local/include/python2.7/numpy/npy_math.h
        src/proj/local/include/python2.7/numpy/npy_os.h
        src/proj/local/include/python2.7/numpy/numpyconfig.h
        src/proj/local/include/python2.7/numpy/old_defines.h
        src/proj/local/include/python2.7/numpy/oldnumeric.h
        src/proj/local/include/python2.7/numpy/ufuncobject.h
        src/proj/local/include/python2.7/numpy/utils.h
        src/proj/local/include/python2.7/Imaging.h
        src/proj/local/include/python2.7/ImDib.h
        src/proj/local/include/python2.7/ImPlatform.h
        src/proj/local/include/python2.7/pyconfig.h
        src/brick_client_bt.c
        src/brick_client_utils.c
        src/bro_fist.c)
